add link and script

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
     <head>
         <title>Pomodoro Clock</title>
 
-        <link rel="stylesheet" type="text/css" href="assets/css/styling.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Alegreya|Questrial" rel="stylesheet">
 
         <script src="http://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous">
         </script>
-        <script type="text/javascript" src="assets/js/app.js"></script>
+        <script type="text/javascript" src="script.js"></script>
 
     </head>
     <body>
